Nuke the old world manager